<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation"
        >
    <string name="HOME_UNIT_PEOPLE">人</string>
    <string name="HOME_UNIT_YEARS">岁</string>
    <string name="HOME_GENDER_FEMALE">女</string>
    <string name="HOME_GENDER_MALE">男</string>
    <string name="HOME_TEST_OK">符合规定</string>
    <string name="HOME_TEST_NO">不符合规定</string>
    <string name="work_time">工作时间:</string>
    <string name="am">上午:</string>
    <string name="pm">下午:</string>
    <string name="to">至</string>
    <string name="work_date">工作日期:</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="enable">启用</string>
    <string name="disable">不启用</string>


</resources>
